--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./scss/main.scss">
 </head>
 <body>
-    <h1>sldjkaslkdjaslkdalkdjalkdjaklsj</h1>
 
+    <load src="./partials/header.html" />
+    <load src="./partials/container-nav.html" />
+    <load src="./partials/containers.html" />
+    <load src="./partials/main.html" />
+    <load src="./partials/footer.html" />
 </body>
 </html>
